--- a/timetable/index.html
+++ b/timetable/index.html
@@ -98,6 +98,7 @@
 	</div>
 			<div class="popupTodayCenter" style="display: flex; justify-content: center;">
 			<div class="popupToday">
+				<div class="closePopupLine"></div>
 				<div class="innerToday"></div>
 			</div>
 			</div>
