--- a/timetable/index.html
+++ b/timetable/index.html
@@ -99,6 +99,7 @@
 			<div class="popupTodayCenter" style="display: flex; justify-content: center;">
 			<div class="popupToday">
 				<div class="closePopupLine"></div>
+				<p>Сейчас:</p>
 				<div class="innerToday"></div>
 			</div>
 			</div>
