--- a/timetable/index.html
+++ b/timetable/index.html
@@ -95,6 +95,8 @@
 			</div>
 
 		</div>
+
+		<div class="blackOpac"></div>
 	</div>
 			<div class="popupTodayCenter" style="display: flex; justify-content: center;">
 			<div class="popupToday">
