--- a/timetable/index.html
+++ b/timetable/index.html
@@ -11,8 +11,21 @@
 </head>
 
 <body>
+	<div class="popupTodayCenter" style="display: flex; justify-content: center;">
+		<div class="popupToday">
+			<div class="closePopup" style="padding: 4px;"><div class="closePopupLine"></div></div>
+			<div class="now"></div>
+			<div class="innerToday"></div>
+			<div class="leftTimeBlock">До конца пары: <div class="leftTime"></div></div>
+		</div>
+	</div>
+	<div class="popupOpenBtn popupOpenBtnNone"><img src="img/popupBtn.png"></div>
+
+
 	<div class="main">
 		<div class="groupName">ЛД-21-18</div>
+
+		<!-- ПОНЕДЕЛЬНИК -->
 		<div class="dayElemBlock">
 			
 			<div class="lessonRow">
@@ -48,9 +61,9 @@
 
 						<div class="firstLesson">
 							<div class="weekNumber">I</div>
-							<div class="lessonName">Физ-ра. Девушки - центр | Юноши - олимпийский</div>
+							<div class="lessonName">Кураторский час. Гайрабеков Р.Х. | Б3-01</div>
 						</div>
-
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
 						<div class="secondLesson">
 							<div class="weekNumber">II</div>
 							<div class="lessonName">ЛЕКЦИЯ | Биология. Гайрабекова Р.Х. | Б1-01</div>
@@ -61,30 +74,18 @@
 			</div>
 
 			<div class="lessonRow">
-				<div class="doubleLessonElems">
-					<div class="numberLessonBlock">
-						<div class="upLine"><img src="img/line.png"></div>
-						<div class="numberLesson">7-8</div>
-						<div class="downLine"><img src="img/dLine.png"></div>
-					</div>
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
 					<div class="lessonsElem">
-
 						<div class="firstLesson">
-							<div class="weekNumber">I</div>
 							<div class="lessonName">ОКНО</div>
 						</div>
-
-						<div class="secondLesson">
-							<div class="weekNumber">II</div>
-							<div class="lessonName">Латинский язык. Эдельбиева М.Л. | Б3-06</div>
-						</div>
-
 					</div>
 				</div>
 			</div>
 
 			<div class="lessonRow">
-				<div class="oneLessonElems">
+				<div class="oneLessonElems"style="margin: 0;">
 					<div class="numberLesson">9-10</div>
 					<div class="lessonsElem">
 						<div class="firstLesson">
@@ -93,19 +94,425 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<!-- ВТОРНИК -->
+		<div class="dayElemBlock">
+			
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">1-2</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
 
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">История. Дасуев И.Л. | А3-02</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">ОКНО</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">3-4</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">ЛЕКЦИЯ | Лекарст-е раст-я. Амалова З.Н. | Б1-01</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">Латинский язык. Эльтаева З.А. | Б3-08</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">5-6</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">Анатомия. Хаджимурадова А.Ж. | Г0-08</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">ЛЕКЦИЯ | Правоведение. Дасуев М.Л. | Б1-01</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">Анатомия. Хаджимурадова А.Ж. | Г0-08</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems"style="margin: 0;">
+					<div class="numberLesson">9-10</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- СРЕДА -->
+		<div class="dayElemBlock">
+			
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">1-2</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">Осн. пер. проф. лит-ры. Сардалова Л.Р | Б3-07</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">Физика, математика. Машаев С-М. Н. | Б3-04</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">3-4</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">ЛЕКЦИЯ | Физика, математика. Машаев С-М. Н. | Б1-01</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">Лекарст-е раст-я. Алихаджиев М.В. | Г3-02</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">5-6</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">Правоведение. Дасуев М.Л. | А3-01</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">ОКНО</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems"style="margin: 0;">
+					<div class="numberLesson">9-10</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ЧЕТВЕРГ -->
+		<div class="dayElemBlock">
+			
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">1-2</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">Физика, математика. Машаев С-М. Н. | Б3-04</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">ЛЕКЦИЯ | Анатомия человека. Кафаров Э.С. | Г0-01</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">Английский язык. Джукаева М.А. | А2-04</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">5-6</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">ОКНО</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">ЛЕКЦИЯ | Химия. Хадисова Ж.Т. | Б1-01</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">Биология. Центроев З.М. | А2-06</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">5-6</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">Латинский язык. Эльтаева З.А. | Б3-08</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">ОКНО</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ПЯТНИЦА -->
+		<div class="dayElemBlock">
+			
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- СУББОТА -->
+		<div class="dayElemBlock">
+			
+			<div class="lessonRow">
+				<div class="doubleLessonElems">
+					<div class="numberLessonBlock">
+						<div class="upLine"><img src="img/line.png"></div>
+						<div class="numberLesson">1-2</div>
+						<div class="downLine"><img src="img/dLine.png"></div>
+					</div>
+					<div class="lessonsElem">
+
+						<div class="firstLesson">
+							<div class="weekNumber">I</div>
+							<div class="lessonName">ЛЕКЦИЯ. История Дасуев И.Л. | Б1-01</div>
+						</div>
+						<div style="text-align: center;" margin: 2px 0 5px 0><img src="img/switchWeek.png" style="width: 14px"></div>
+						<div class="secondLesson">
+							<div class="weekNumber">II</div>
+							<div class="lessonName">Перевод проф. лит-ры. Сардалова Л.Р. | Б3-07</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="lessonRow">
+				<div class="oneLessonElems">
+					<div class="numberLesson">7-8</div>
+					<div class="lessonsElem">
+						<div class="firstLesson">
+							<div class="lessonName">ОКНО</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
-		<div class="blackOpac"></div>
+
+		<div class="blackOpac"></div> <!-- затемнение -->
 	</div>
-			<div class="popupTodayCenter" style="display: flex; justify-content: center;">
-			<div class="popupToday">
-				<div class="closePopupLine"></div>
-				<p>Сейчас:</p>
-				<div class="innerToday"></div>
-			</div>
-			</div>
-<div></div>
+
+
+
+
 	<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 	<script src="script.js"></script>
 
