--- a/timetablev2/index.html
+++ b/timetablev2/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title> Timetable </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="adaptive.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -36,7 +38,7 @@
 					<div class="lesson_back lesson1">
 						<div class="lesson_name">Экономика</div>
 					</div>
-					<div class="empty_lesson">ОКНО</div>
+					<div class="empty_lesson2">ОКНО</div>
 				</div>
 
 				<div class="lesson_block">
@@ -49,7 +51,7 @@
 					<div class="lesson_back lesson1">
 						<div class="lesson_name">Экономика</div>
 					</div>
-					<div class="empty_lesson">ОКНО</div>
+					<div class="empty_lesson2">ОКНО</div>
 				</div>
 			</div> 
 		</div>
@@ -191,17 +193,17 @@
 				<div style="color: #fff;" class="day_name">Суббота</div>
 
 				<div class="lesson_block_double">
-					<div class="empty_lesson">ОКНО</div>
+					<div class="empty_lesson1">ОКНО</div>
 					<div class="lesson_back lesson2">
 						<div class="lesson_name">Кураторский</div>
 					</div>
 				</div>
 
 				<div class="lesson_block_double">
-					<div class="lesson_back lesson2">
+					<div class="lesson_back lesson1">
 						<div class="lesson_name">Биоорганика</div>
 					</div>
-					<div class="empty_lesson">ОКНО</div>
+					<div class="empty_lesson2">ОКНО</div>
 				</div>
 
 				<div class="lesson_block">
@@ -211,14 +213,14 @@
 				</div>
 
 				<div class="lesson_block_double">
-					<div class="lesson_back lesson2">
+					<div class="lesson_back lesson1">
 						<div class="lesson_name">Биоэтика</div>
 					</div>
-					<div class="empty_lesson">ОКНО</div>
+					<div class="empty_lesson2">ОКНО</div>
 				</div>
 
 				<div class="lesson_block_double">
-					<div class="empty_lesson">ОКНО</div>
+					<div class="empty_lesson1">ОКНО</div>
 					<div class="lesson_back lesson2">
 						<div class="lesson_name">Биоорганика</div>
 					</div>
@@ -227,6 +229,27 @@
 		</div>
 
 	</div>
+
+
+	<div class="docs_view">
+		<div class="back">Назад</div>
+		<div class="doc">
+			<div class="doc_name">Атлас Синельникова</div>
+			<div class="doc_download">Скачать</div>
+		</div>
+		<div class="doc">
+			<div class="doc_name">Методичка гайворонского</div>
+			<div class="doc_download">Скачать</div>
+		</div>
+		<div class="doc">
+			<div class="doc_name">Атлас Сапина</div>
+			<div class="doc_download">Скачать</div>
+		</div>
+	</div>
+
+
+
+
 
 	<div class="right_panel">
 		<div class="lesson_more">
@@ -239,8 +262,23 @@
 		<img src="img/close_icon.png" class="close_right">
 	</div>
 
-
 	</div>
+
+
+	<div class="mobile_more_info">
+		<div class="lesson_more">
+			<img src="" class="icon_discipline">
+			<div class="lesson_name_more"></div>
+			<div class="aud"></div>
+			<div class="teacher_name"></div>
+			<div class="docs_discipline">Лекции<a href="#"></a></div>
+		</div>
+		<img src="img/close_icon.png" class="close_mobile_info">
+	</div>
+
+
+
+
 
 	<script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
 	<script src="script.js"></script>
